[package]
name = "raftpico"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonlrpc = "0.1.0"
mio = { version = "1.0.2", features = ["net", "os-poll"] }
raftbare = "0.1.1"
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

[dev-dependencies]
clap = { version = "4.5.16", features = ["derive"] }
orfail = "1.1.0"
