[package]
name = "raftpico"
version = "0.0.1"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "A simple Raft framework built on top of the raftbare crate."
homepage = "https://github.com/sile/raftpico"
repository = "https://github.com/sile/raftpico"
readme = "README.md"

[dependencies]
jsonlrpc = "0.1.0"
mio = { version = "1.0.2", default-features=false, features = ["net", "os-poll"] }
raftbare = "0.1.1"
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

[dev-dependencies]
clap = { version = "4.5.16", features = ["derive"] }
